k8s/dev/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-client
spec:
  selector:
    matchLabels:
      app: notes-client
  template:
    metadata:
      labels:
        app: notes-client
    spec:
      containers:
        - name: notes-client
          image: notes-client
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notes-client
spec:
  type: NodePort
  selector:
    app: notes-client
  ports:
    - port: 80
      targetPort: 3000
