k8s/dev/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-server
spec:
  selector:
    matchLabels:
      app: notes-server
  template:
    metadata:
      labels:
        app: notes-server
    spec:
      containers:
        - name: notes-server
          image: notes-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notes-server
spec:
  type: NodePort
  selector:
    app: notes-server
  ports:
    - port: 80
      targetPort: 8080
